fix swagger auth
